# cargo_generate_templates

./: README.md
.github/: dependabot.yml
binary/: .gitlab-ci.yml  .taplo.toml  Cargo.toml  Makefile.toml  README.tpl  cargo-generate.toml  cliff.toml  deny.toml
binary/docs/user_guide/: book.toml
binary/src/: main.rs
